gatekeeper-config/tests/fixtures/ingress-annotations/ingress-auth-snippet-modern.yaml
# SPDX-FileCopyrightText: 2026 SAP SE or an SAP affiliate company and Greenhouse contributors
# SPDX-License-Identifier: Apache-2.0

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-snippet
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/auth-snippet: "auth_request /auth;"
spec:
  rules: []
