gatekeeper-config/tests/fixtures/ingress-annotations/ingress-modsecurity-snippet-legacy.yaml
# SPDX-FileCopyrightText: 2026 SAP SE or an SAP affiliate company and Greenhouse contributors
# SPDX-License-Identifier: Apache-2.0

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: modsecurity-snippet
  namespace: default
  annotations:
    ingress.kubernetes.io/modsecurity-snippet: "SecRuleEngine On"
spec:
  rules: []
