gatekeeper-config/tests/fixtures/ingress-annotations/ingress-no-snippet.yaml
# SPDX-FileCopyrightText: 2026 SAP SE or an SAP affiliate company and Greenhouse contributors
# SPDX-License-Identifier: Apache-2.0

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clean
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules: []
